Bill Pay and Acct Info Changes

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -33,15 +33,24 @@
             android:name=".MapsActivity"
             android:label="@string/title_activity_maps"></activity>
         <activity
+            android:name=".PasswordActivity"
+            android:label="Password "></activity>
+        <activity
             android:name=".HomePageActivity"
             android:label="Home Page"></activity>
+        <activity
+            android:name=".BillActivity"
+            android:label="Bill Pay Page"></activity>
         <activity
             android:name=".PrescriptionMainActivity"
             android:label="Main Prescription Page"></activity>
         <activity
+            android:name=".CardActivity"
+            android:label="Card Page"></activity>
+        <activity
             android:name=".AccountInfoActivity"
             android:label="Account Info Page"></activity>
-        <activity android:name=".MainActivity">
+        <activity android:name=".LoginActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
