--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -36,6 +36,9 @@
             android:name=".createAccount"
             android:label="Create Account"></activity>
         <activity
+            android:name=".forgotPassword"
+            android:label="Password Reset"></activity>
+        <activity
             android:name=".PasswordActivity"
             android:label="Password "></activity>
         <activity
